welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:1: error: Missing closing brace `}' assumed here
var s=0
^